--- a/index.html
+++ b/index.html
@@ -1,7 +1,25 @@
 <!DOCTYPE html>
 <html>
+    <meta charset="utf-8" name="vieport" content="width=device-width,initial-scale=1,user-scalable=1"/>
 <head>
     <title>NephronAI by NightLight AI</title>
+    <style>
+        body{
+            background-color:black;
+            color:white;
+        }
+        button{
+            border:1px solid white;
+            color:white;
+            padding: 8px;
+            background-color: black;
+            transition: all 0.6s ease;
+        }
+        button:hover{
+            color:black;
+            background-color:white;
+        }
+    </style>
 </head>
 <body>
     <h1>Nephron AI by <i>NightLight AI</i></h1>
