--- a/classifydiagnosis.html
+++ b/classifydiagnosis.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+    <meta charset="utf-8" name="vieport" content="width=device-width,initial-scale=1,user-scalable=1"/>
 <head>
     <title>NephronAI -Classify Chronic Kidney Disease</title>
 </head>
