--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
-    <meta charset="utf-8" name="vieport" content="width=device-width,initial-scale=1,user-scalable=1"/>
+    <meta charset="utf-8" name="viewport" content="width=device-width,initial-scale=1,user-scalable=1"/>
+    <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
 <head>
     <title>NephronAI by NightLight AI</title>
     <style>
         body{
             background-color:black;
             color:white;
+            font-family:'Poppins' , sans-serif;
+            font-size:16px;
         }
         button{
             border:1px solid white;
@@ -14,16 +17,33 @@
             padding: 8px;
             background-color: black;
             transition: all 0.6s ease;
+            font-family:'Poppins' , sans-serif;
         }
         button:hover{
             color:black;
             background-color:white;
+            cursor:pointer;
+        }
+        .content{
+            padding-left:20px !important;
+        }
+        @media screen and (min-width:720px){
+            .content{
+                margin-left:20%;
+                width:60%;
+                font-size:18px;
+            }
         }
     </style>
 </head>
 <body>
-    <h1>Nephron AI by <i>NightLight AI</i></h1>
-    <h5>An innovative project that aims to use power of AI to predict chronic Kidney Disease as well as detect its causes and also give an important personalised feedback</h5>
+    <div class="content">
+    <h1>Nephron AI by <u>NightLight AI</u></h1>
+    <h5>
+        <br/>An innovative project that aims to use power of AI to predict chronic Kidney Disease as well as detect its causes and also give an important personalised feedback
+    </h5>
+    <br/><br/>
     <button onclick='javascript:window.location.href="classifydiagnosis.html" '>GET PREDICTION FOR DIAGNOSIS</button>
+    </div>
 </body>
 </html>
