--- a/classifydiagnosis.html
+++ b/classifydiagnosis.html
@@ -3,8 +3,51 @@
     <meta charset="utf-8" name="vieport" content="width=device-width,initial-scale=1,user-scalable=1"/>
 <head>
     <title>NephronAI -Classify Chronic Kidney Disease</title>
+    <style>
+        body{
+            background-color:white;
+            color:blackwhite;
+            font-family:'Poppins' , sans-serif;
+            font-size:16px;
+        }
+        button{
+            border:1px solid black;
+            color:black;
+            padding: 8px;
+            background-color: white;
+            transition: all 0.6s ease;
+            font-family:'Poppins' , sans-serif;
+        }
+        button:hover{
+            color:white;
+            background-color:black;
+            cursor:pointer;
+        }
+        .content{
+            padding-left:20px !important;
+        }
+        .content input[type=text]{
+            border:none;
+            border-bottom: 1px solid black;
+            padding-left:8px;
+            font-family: :'Poppins',sans-serif;
+            font-size:14px;
+        }
+        .content p a{
+            text-decoration: underline;
+            color:black;
+        }
+        @media screen and (min-width:720px){
+            .content{
+                margin-left:20%;
+                width:60%;
+                font-size:18px;
+            }
+        }
+    </style>
 </head>
 <body>
+    <div class="content">
 <form id="forms">
 Specific Gravity:<input type="text" placeholder="numeric can be decimal e.g. 1.02" id="sgt"/><br/>
 Albumin:<input type="text" placeholder="whole number e.g 1" id="alt"/><br/>
@@ -21,24 +64,25 @@ Hypertension:<input type="text" placeholder="yes or no e.g. yes" id="htnt"/><br/
 <br/><br/>
 
 <iframe id="iframe" width=100% style="max-width:500px" height=50px src="https://ayund18.gisksk.isaso" /></iframe>
+</div>
     <script>
 
-var ifrae=document.getElementById("iframe");
+    var ifrae=document.getElementById("iframe");
     ifrae.style.border="none";
-function loadsEx(){
-    var sgt=document.getElementById("sgt").value;
-var alt=document.getElementById("alt").value;
-var sct=document.getElementById("sct").value;
-var hemot=document.getElementById("hemot").value;
-var pcvt=document.getElementById("pcvt").value;
-var wct=document.getElementById("wct").value;
-var rct=document.getElementById("rct").value;
-var htnt=document.getElementById("htnt").value;
+    function loadsEx(){
+        var sgt=document.getElementById("sgt").value;
+        var alt=document.getElementById("alt").value;
+        var sct=document.getElementById("sct").value;
+        var hemot=document.getElementById("hemot").value;
+        var pcvt=document.getElementById("pcvt").value;
+        var wct=document.getElementById("wct").value;
+        var rct=document.getElementById("rct").value;
+        var htnt=document.getElementById("htnt").value;
 
-    var newurl="https://now-express.intru-innovation.now.sh/clsazure"+"?sg="+sgt+"&al=" +alt+"&sc="+sct+"&hemo="+hemot+"&pcv="+pcvt+"&wc="+wct+"&rc="+rct+"&htn="+htnt;
-    ifrae.setAttribute("src",newurl);
-alert('In the Response, "ckd" means Chronic Kidney Disease Probability and "notckd" meand no probability for the disease');
-};
+            var newurl="https://now-express.intru-innovation.now.sh/clsazure"+"?sg="+sgt+"&al=" +alt+"&sc="+sct+"&hemo="+hemot+"&pcv="+pcvt+"&wc="+wct+"&rc="+rct+"&htn="+htnt;
+        ifrae.setAttribute("src",newurl);
+        alert('In the Response, "ckd" means Chronic Kidney Disease Probability and "notckd" meand no probability for the disease');
+    };
 
 
 </script>
