--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
         .content{
             padding-left:20px !important;
         }
+        .content p a{
+            text-decoration: underline;
+            color:white;
+        }
         @media screen and (min-width:720px){
             .content{
                 margin-left:20%;
@@ -40,8 +44,13 @@
     <div class="content">
     <h1>Nephron AI by <u>NightLight AI</u></h1>
     <h5>
-        <br/>An innovative project that aims to use power of AI to predict chronic Kidney Disease as well as detect its causes and also give an important personalised feedback
+        <br/>An innovative project that aims to use power of AI to predict chronic Kidney Disease as well as detect its causes and also give an important personalised feedback.
     </h5>
+    <p>
+        This projects uses AI (Artificial Intelligence) to predict whether a person may contract with Chronic Kidney Disease or not based on 8 Medical Attributes. And Also, gives out the possible cause for the contraction based on the results of a short quiz.
+        This project is under development. The founder and developer of this project is 15 year old high school student at New Delhi, India.
+        To get more information on how to contrbute or contact the administartor, contact directly via  <a href="https://ayushanand18.github.io">https://ayushanand18.github.io</a>
+    </p>
     <br/><br/>
     <button onclick='javascript:window.location.href="classifydiagnosis.html" '>GET PREDICTION FOR DIAGNOSIS</button>
     </div>
