--- a/classifydiagnosis.html
+++ b/classifydiagnosis.html
@@ -60,8 +60,8 @@ Specific Gravity:<br/>
 Albumin:
 <br/><span class="comment">(Select from this list)</span>
 <br/><select class="select" id="alt">
-    <option value=""
->noitpo/<--Select--leS--    <option value="1">1</option>
+    <option value="">--Select--</option>
+    <option value="1">1</option>
     <option value="2">2</option>
     <option value="3">3</option>
     <option value="4">4</option>
