--- a/index.html
+++ b/index.html
@@ -1,58 +1,181 @@
 <!DOCTYPE html>
-<html>
-    <meta charset="utf-8" name="viewport" content="width=device-width,initial-scale=1,user-scalable=1"/>
-    <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
+<html lang="en">
 <head>
-    <title>NephronAI by NightLight AI</title>
-    <style>
-        body{
-            background-color:black;
-            color:white;
-            font-family:'Poppins' , sans-serif;
-            font-size:16px;
-        }
-        button{
-            border:1px solid white;
-            color:white;
-            padding: 8px;
-            background-color: black;
-            transition: all 0.6s ease;
-            font-family:'Poppins' , sans-serif;
-        }
-        button:hover{
-            color:black;
-            background-color:white;
-            cursor:pointer;
-        }
-        .content{
-            padding-left:20px !important;
-        }
-        .content p a{
-            text-decoration: underline;
-            color:white;
-        }
-        @media screen and (min-width:720px){
-            .content{
-                margin-left:20%;
-                width:60%;
-                font-size:18px;
-            }
-        }
-    </style>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Nephron AI </title>
+<meta name="description" content="Free Bootstrap Theme by uicookies.com">
+<meta name="keywords" content="free website templates, free bootstrap themes, free template, free bootstrap, free website template">
+<link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500" rel="stylesheet">
+<link rel="stylesheet" href="css/styles-merged.css">
+<link rel="stylesheet" href="css/style.min.css">
+<link rel="stylesheet" href="css/custom.css">
+<!--[if lt IE 9]>
+      <script src="js/vendor/html5shiv.min.js"></script>
+      <script src="js/vendor/respond.min.js"></script>
+    <![endif]-->
 </head>
 <body>
-    <div class="content">
-    <h1>Nephron AI by <u>NightLight AI</u></h1>
-    <h5>
-        <br/>An innovative project that aims to use power of AI to predict chronic Kidney Disease as well as detect its causes and also give an important personalised feedback.
-    </h5>
-    <p>
-        This projects uses AI (Artificial Intelligence) to predict whether a person may contract with Chronic Kidney Disease or not based on 8 Medical Attributes. And Also, gives out the possible cause for the contraction based on the results of a short quiz.
-        This project is under development. The founder and developer of this project is 15 year old high school student at New Delhi, India.
-        To get more information on how to contrbute or contact the administartor, contact directly via  <a href="https://ayushanand18.github.io">https://ayushanand18.github.io</a>
-    </p>
-    <br/><br/>
-    <button onclick='javascript:window.location.href="classifydiagnosis.html" '>GET PREDICTION FOR DIAGNOSIS</button>
-    </div>
-</body>
+
+<header role="banner" class="probootstrap-header">
+<div class="container-fluid">
+<a href="index.html" class="probootstrap-logo">Nephron<span>AI</span></a>
+<a href="#" class="probootstrap-burger-menu visible-xs"><i>Menu</i></a>
+<div class="mobile-menu-overlay"></div>
+<nav role="navigation" class="probootstrap-nav hidden-xs">
+<ul class="probootstrap-main-nav">
+<li class="active"><a href="index.html">Home</a></li>
+<li><a href="contribute.html">Contribute</a></li>
+<li><a href="about.html">About</a></li>
+<li><a href="https://ayushanand18.github.io/">NightLightAI</a></li>
+</ul>
+<div class="extra-text visible-xs">
+<a href="#" class="probootstrap-burger-menu"><i>Menu</i></a>
+<h5>Social</h5>
+<ul class="social-buttons">
+<li><a href="#"><i class="icon-twitter"></i></a></li>
+<li><a href="#"><i class="icon-facebook"></i></a></li>
+<li><a href="#"><i class="icon-instagram2"></i></a></li>
+</ul>
+<p><small>&copy; Copyright 2019 NightLight AI. All Rights Reserved.</small></p>
+</div>
+</nav>
+</div>
+</header>
+
+
+<section class="probootstrap-intro" style="background-image: url(img/hero_bg_2.jpg);" data-stellar-background-ratio="0.5">
+<div class="container-fluid">
+<div class="row">
+<div class="col-md-7 probootstrap-intro-text">
+<h1 class="probootstrap-animate">Human + AI = NephronAI is wiping out Chronic Kidney Disease</h1>
+<div class="probootstrap-subtitle probootstrap-animate">
+<h2>With the power AI, and intelligence of the Human brain we have created a solution to answer World's Medical Crisis- Chronic Kidney Disease.</h2>
+</div>
+<p class="watch-intro probootstrap-animate"><a href="/classify.html" class="popup-vimeo">Try it now<i class="icon-play2"></i></a></p><br>
+</div>
+</div>
+</div>
+<a class="probootstrap-scroll-down js-next" href="#next-section">Scroll down <i class="icon-chevron-down"></i></a>
+</section>
+
+
+<section class="probootstrap-section">
+<div class="container">
+<div class="row">
+<div class="col-lg-12 col-md-12 mb70 section-heading probootstrap-animate">
+<h2>A dream project...</h2>
+<p class="lead">Hi! I am a 15 year-old high school student in India who is figuring how AI can help cure predict and diagnos Chronic Kidney Disease. </p>
+</div>
+</div>
+<div class="row mb70">
+<div class="col-md-4 probootstrap-animate">
+<div class="probootstrap-box">
+<div class="icon text-center"><i class="icon-tools2"></i></div>
+<h3>Predict Disease</h3>
+<p>Using AI Algorithm built on Microsoft's Azure Machine Learning Architecture, our AI systems can predict whether a patient is affected by Chrnoic Kidney Disease or not.</p>
+<ul class="text-left with-icon colored">
+<li><i class="icon-radio-checked"></i> <span>Input simple medical records</span></li>
+<li><i class="icon-radio-checked"></i> <span>Our AI Algorithm processes it</span></li>
+<li><i class="icon-radio-checked"></i> <span>You are notified if you are vulnerable</span></li>
+</ul>
+</div>
+</div>
+<div class="col-md-4 probootstrap-animate">
+<div class="probootstrap-box">
+<div class="icon text-center"><i class="icon-desktop"></i></div>
+<h3>Predict the Cause</h3>
+<p>If our AI Algorithm figure out that you are vulnerable, and have have been affected by Chronic Kidney Disease then we shall investigate the cause as well.</p>
+<ul class="text-left with-icon colored">
+<li><i class="icon-radio-checked"></i> <span>Answer basic lifestyle questions</span></li>
+<li><i class="icon-radio-checked"></i> <span>Plus Past disease history </span></li>
+<li><i class="icon-radio-checked"></i> <span>Another AI layer will predict the cause</span></li><br/>
+</ul>
+</div>
+</div>
+<div class="col-md-4 probootstrap-animate">
+<div class="probootstrap-box">
+<div class="icon text-center"><i class="icon-lightbulb"></i></div>
+<h3>Recovery Strategy</h3>
+<p>Now, that we have told you about your diagnosis as well as it's cause, then let's fight it. We'll recommend you certain lifestyle measures that you can take to at least lessen the ill effects of the disease.</p>
+<ul class="text-left with-icon colored">
+<li><i class="icon-radio-checked"></i> <span>Based on the cause predicted</span></li>
+<li><i class="icon-radio-checked"></i> <span>You'll get some lifestyle tips</span></li>
+<li><i class="icon-radio-checked"></i> <span>Follow them and keep up fighting spirit</span></li>
+</ul>
+</div>
+</div>
+</div>
+<div class="row">
+<div class="col-md-4 col-md-offset-4 probootstrap-animate">
+<p class="text-center">
+<a href="classify.html" class="btn btn-primary btn-lg btn-block" role="button">Get My Prediction</a>
+</p>
+</div>
+</div>
+</div>
+</section>
+
+
+<section class="probootstrap-section probootstrap-section-colored">
+<div class="container">
+<div class="row">
+<div class="col-lg-12 col-md-12 mb70 section-heading probootstrap-animate">
+<h2>But wait...</h2>
+<p class="lead">Here's some additional information for you. We aren't a big team yet, it's just one contributor here - a 15 year old student who wishes to aim good for mankind - Ayush Anand. Why not <a href="contribute.html">Contribute</a> to us. We'll be more than glad.</p>
+</div>
+</div>
+</div>
+</section>
+
+
+<section class="probootstrap-section probootstrap-section-dark">
+<div class="container">
+<div class="row">
+<div class="col-md-8 col-md-offset-2 section-heading mb50 text-center probootstrap-animate">
+<h2>Know About the Creator</h2>
+<p class="lead">Ahh! I'm sorry if i forgot to tell you about my creator. He's Ayush Anand.<br/><a href="https://ayushanand18.github.io/about-me.html">Know more about him</a></p>
+</div>
+</div>
+</div>
+</section>
+
+
+<footer role="contentinfo" class="probootstrap-footer">
+<div class="container">
+<div class="row">
+<div class="col-md-4">
+<div class="probootstrap-footer-widget">
+<h3>About NephronAI</h3>
+<p>Nephron AI is the child project of NightLight AI by Ayush Anand. This is a Machine Learning powered toll for diagnosis and analysis of causes for Chronic Kidney Disease with 100% accuracy.</p>
+<p><a href="#" class="link-with-icon">Learn More <i class=" icon-chevron-right"></i></a></p>
+</div>
+
+
+<div class="col-md-4">
+<div class="probootstrap-footer-widget">
+<h3>Connect With Us</h3>
+<ul class="probootstrap-footer-social">
+<li><a href="https://twitter.com/theayushanand"><i class="icon-twitter"></i></a></li>
+<li><a href=""><i class="icon-facebook"></i></a></li>
+<li><a href=""><i class="icon-instagram2"></i></a></li>
+</ul>
+</div>
+</div>
+</div>
+<div class="row mt40">
+<div class="col-md-12 text-center">
+<p>
+<small>&copy; 2019 <a href="https://ayushanand18.github.io/" target="_blank">NightLight AI</a>. All Rights Reserved. </small><br>
+<a href="#" class="js-backtotop">Back to top</a>
+</p>
+</div>
+</div>
+</div>
+</footer>
+
+<script src="js/scripts.min.js" type="ef720126cb2c08d7b1817c75-text/javascript"></script>
+<script src="js/main.min.js" type="ef720126cb2c08d7b1817c75-text/javascript"></script>
+<script src="js/custom.js" type="ef720126cb2c08d7b1817c75-text/javascript"></script>
+<script src="https://ajax.cloudflare.com/cdn-cgi/scripts/7089c43e/cloudflare-static/rocket-loader.min.js" data-cf-settings="ef720126cb2c08d7b1817c75-|49" defer=""></script></body>
 </html>
