--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Nephron AI </title>
-<meta name="description" content="Free Bootstrap Theme by uicookies.com">
-<meta name="keywords" content="free website templates, free bootstrap themes, free template, free bootstrap, free website template">
+<title>NephronAI </title>
+<meta name="description" content="NephronAI - an AI project by NightLight AI that aims to uses AI to counter Chronic Kidney Disease.">
+<meta name="keywords" content="NephronAI, chronic kidney disease, nightlight ai">
 <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500" rel="stylesheet">
 <link rel="stylesheet" href="css/styles-merged.css">
 <link rel="stylesheet" href="css/style.min.css">
@@ -27,13 +27,13 @@
 <li class="active"><a href="index.html">Home</a></li>
 <li><a href="contribute.html">Contribute</a></li>
 <li><a href="about.html">About</a></li>
-<li><a href="https://ayushanand18.github.io/">NightLightAI</a></li>
+<li><a href="https://ayushanand18.github.io/">NightLight AI</a></li>
 </ul>
 <div class="extra-text visible-xs">
 <a href="#" class="probootstrap-burger-menu"><i>Menu</i></a>
 <h5>Social</h5>
 <ul class="social-buttons">
-<li><a href="#"><i class="icon-twitter"></i></a></li>
+<li><a href="https://twitter.com/theayushanand"><i class="icon-twitter"></i></a></li>
 <li><a href="#"><i class="icon-facebook"></i></a></li>
 <li><a href="#"><i class="icon-instagram2"></i></a></li>
 </ul>
@@ -48,7 +48,7 @@
 <div class="container-fluid">
 <div class="row">
 <div class="col-md-7 probootstrap-intro-text">
-<h1 class="probootstrap-animate">Human + AI = NephronAI is wiping out Chronic Kidney Disease</h1>
+<h1 class="probootstrap-animate">Human + AI = NephronAI is fighting Chronic Kidney Disease</h1>
 <div class="probootstrap-subtitle probootstrap-animate">
 <h2>With the power AI, and intelligence of the Human brain we have created a solution to answer World's Medical Crisis- Chronic Kidney Disease.</h2>
 </div>
@@ -144,13 +144,25 @@
 <footer role="contentinfo" class="probootstrap-footer">
 <div class="container">
 <div class="row">
+
 <div class="col-md-4">
 <div class="probootstrap-footer-widget">
 <h3>About NephronAI</h3>
 <p>Nephron AI is the child project of NightLight AI by Ayush Anand. This is a Machine Learning powered toll for diagnosis and analysis of causes for Chronic Kidney Disease with 100% accuracy.</p>
 <p><a href="#" class="link-with-icon">Learn More <i class=" icon-chevron-right"></i></a></p>
 </div>
+</div>
 
+<div class="col-md-4">
+<div class="probootstrap-footer-widget">
+<h3>Important Links</h3>
+<ul class="probootstrap-footer-widget">
+<li><a href="/">Home (NightLight AI)</a></li>
+<li><a href="/privacy">Privacy</a></li>
+<li><a href="/terms">Terms</a></li>
+</ul>
+</div>
+</div>
 
 <div class="col-md-4">
 <div class="probootstrap-footer-widget">
@@ -162,13 +174,13 @@
 </ul>
 </div>
 </div>
-</div>
 <div class="row mt40">
 <div class="col-md-12 text-center">
 <p>
 <small>&copy; 2019 <a href="https://ayushanand18.github.io/" target="_blank">NightLight AI</a>. All Rights Reserved. </small><br>
 <a href="#" class="js-backtotop">Back to top</a>
 </p>
+</div>
 </div>
 </div>
 </div>
