--- a/contribute.html
+++ b/contribute.html
@@ -54,7 +54,7 @@
 </header>
 
 
-<section class="probootstrap-intro" style="background-image: url(img/hero_bg_2.jpg);" data-stellar-background-ratio="0.5">
+<section class="probootstrap-intro" style="" data-stellar-background-ratio="0.5">
 <div class="container-fluid">
 <div class="row">
 <div class="col-md-7 probootstrap-intro-text">
