--- a/about.html
+++ b/about.html
@@ -155,7 +155,7 @@ But if chronic kidney disease is detected early then we can easily save thousand
 </div>
 </div>
 <div class="row mt40">
-<div class="col-md-12 text-center">
+<div class="text-center">
 <p>
 <small>&copy; 2019 <a href="https://ayushanand18.github.io/" target="_blank">NightLight AI</a>. All Rights Reserved. </small><br>
 <a href="#" class="js-backtotop">Back to top</a>
