--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 </div>
 </div>
 <div class="row mt40">
-<div class="col-md-12 text-center">
+<div class="text-center">
 <p>
 <small>&copy; 2019 <a href="https://ayushanand18.github.io/" target="_blank">NightLight AI</a>. All Rights Reserved. </small><br>
 <a href="#" class="js-backtotop">Back to top</a>
