--- a/about.html
+++ b/about.html
@@ -154,14 +154,15 @@ But if chronic kidney disease is detected early then we can easily save thousand
 </ul>
 </div>
 </div>
-<div class="row mt40">
+
+</div>
+</div>
+<div class="">
 <div class="text-center">
 <p>
 <small>&copy; 2019 <a href="https://ayushanand18.github.io/" target="_blank">NightLight AI</a>. All Rights Reserved. </small><br>
 <a href="#" class="js-backtotop">Back to top</a>
 </p>
-</div>
-</div>
 </div>
 </div>
 </footer>
