--- a/contribute.html
+++ b/contribute.html
@@ -18,7 +18,6 @@
 <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500" rel="stylesheet">
 <link rel="stylesheet" href="css/styles-merged.css">
 <link rel="stylesheet" href="css/style.min.css">
-
 <!--[if lt IE 9]>
       <script src="js/vendor/html5shiv.min.js"></script>
       <script src="js/vendor/respond.min.js"></script>
@@ -154,14 +153,15 @@
 </ul>
 </div>
 </div>
-<div class="row mt40">
+
+</div>
+</div>
+<div class="">
 <div class="text-center">
 <p>
 <small>&copy; 2019 <a href="https://ayushanand18.github.io/" target="_blank">NightLight AI</a>. All Rights Reserved. </small><br>
 <a href="#" class="js-backtotop">Back to top</a>
 </p>
-</div>
-</div>
 </div>
 </div>
 </footer>
