--- a/index.html
+++ b/index.html
@@ -182,14 +182,15 @@
 </ul>
 </div>
 </div>
-<div class="row mt40">
+
+</div>
+</div>
+<div class="">
 <div class="text-center">
 <p>
 <small>&copy; 2019 <a href="https://ayushanand18.github.io/" target="_blank">NightLight AI</a>. All Rights Reserved. </small><br>
 <a href="#" class="js-backtotop">Back to top</a>
 </p>
-</div>
-</div>
 </div>
 </div>
 </footer>
