Fixed Modal in /classify

--- a/classify.html
+++ b/classify.html
@@ -10,8 +10,8 @@
 <meta name="keywords" content="NephronAI, chronic kidney disease, nightlight ai">
 <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500" rel="stylesheet">
 <link rel="stylesheet" href="css/styles-merged.css">
-<link rel="stylesheet" href="css/classify.min.css">
 <link rel="stylesheet" href="css/style.min.css">
+<link rel="stylesheet" href="css/classify.min.css">
 </head>
 <body>
 
@@ -50,8 +50,8 @@
 <div class="probootstrap-subtitle probootstrap-animate">
 <h2>Are you ready? Fill the form below to know whether you have Chronic Kidney Disease or not.</h2>
 </div>
-<p class="watch-intro probootstrap-animate"><span style="max-width:380px;" class="btn btn-primary open-modal">Try it now</span></p><br>
-<span >This is a Machine Learning Classification. Therefore, results might be inaccurate. We don't certify 100% authenticity.</span>
+<p class="watch-intro probootstrap-animate"><button class="btn btn-primary openmodal open-modal">Try it NOW</button></p><br>
+<span class="info">This is a Machine Learning Classification. Therefore, results might be inaccurate. We don't certify 100% authenticity.</span>
 </div>
 </div>
 </div>
@@ -233,4 +233,6 @@
 
   gtag('config', 'UA-129803213-2');
 </script>
+<div class="pseudo-div"></div>
+</body>
 </html>
